added home view and locale translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,6 +42,10 @@ en:
     index:
       sign in hint: 'Sign in user: lolita@ithouse.lv password: lolita'
       sign in: Sign in
+      News: News
+  articles:
+    index:
+      News: News
   shared:
     header:
       About: About
